# linux-images

./: .gitignore  .rules  AGENTS.md  Cargo.toml  Dockerfile.post-process  README.md  justfile  test-image.sh
.github/: dependabot.sh
autoinstall/: generate-user-data.js  migrate-to-btrfs.sh  remaster-iso.sh  user-data
common/: grow-root-filesystem  packages.txt  setup-btrfs.sh  setup-firewall.sh  setup-swap.sh  setup-tailscale.sh  tailscale-first-boot.service  tailscale-first-boot.sh  ts-up.sh
docs/: ARCHITECTURE-ARTIFACTS.md  ARCHITECTURE-INSTALLER.md  GUIDE-IMAGES.md  GUIDE-INSTALLER.md  hostname-screen-plan.md  integrity-verification-plan.md  login-screen-plan.md  manual-testing.md  plan-dhcp-hostname.md  plan-disk-encryption-rework.md  plan-iso-partition-images.md  plan-network-config.md  web-ui-plan.md
image/: Dockerfile.post-process  build-pi-eeprom-sd.sh  build.sh  configure.sh  packages.sh  packages.txt  pi-eeprom-config.txt  post-process.sh
installer/tui/: Cargo.toml  build.rs
installer/tui/src/: besconf.rs  config.rs  disk.rs  encryption.rs  firstboot.rs  hostname_template.rs  main.rs  net.rs  paths.rs  plan.rs  run.rs  script.rs  timezone.rs  ui.rs  util.rs  writer.rs
installer/tui/src/ui/: render.rs  run.rs
installer/tui/src/writer/: device.rs  disk_writer.rs  luks.rs  manifest.rs  progress.rs  verity.rs
installer/tui/tests/: dry_run.rs  luks_encryption.rs
installer/tui/tests/dry_run/: auto_mode.rs  common.rs  config_edge_cases.rs  disk_strategy.rs  errors.rs  hostname.rs  interactive.rs  main.rs  output_schema.rs  prefilled.rs  scripted_navigation.rs  timezone.rs
iso/: Dockerfile.post-process  bes-install.toml.template  bootloader.sh  build-iso-base.sh  build-iso-rootfs.sh  build-iso.sh  fix-partitions.sh  generate-user-data.js  grow-root-filesystem  grow-root-filesystem.service  luks-reencrypt.service  migrate-to-btrfs.sh  packages.txt  post-process.sh  remaster-iso.sh  remountTarget.sh  repartition.sh  setup-firewall.sh  setup-snapper.sh  ts-up.sh  user-data
packer/: amd64.pkrvars.hcl  arm64.pkrvars.hcl  ubuntu-24.04.pkr.hcl
scripts/: copy-ami-to-region.sh  demote-public-amis.sh  gen-manual-testing.sh  import-to-aws.sh  migrate-pi-to-piboot.sh  publish-release-shard.sh  register-ami-for-release.sh  register-ami.sh  verify-outputs.sh
templates/: ubuntu-amd64.ovf.template  (+1 more)
(+80 files in other folders)
