[package]
name = "bes-installer"
version = "0.1.0"
edition = "2024"
description = "BES Linux Images — TUI Installer"
license = "MIT"

[[bin]]
name = "bes-installer"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
crossterm = "0.29.0"
env_logger = "0.11.9"
log = "0.4.29"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
toml = "1.0.3"
tui-big-text = "0.8.2"
zstd = "0.13.3"

[dev-dependencies]
tempfile = "3.26.0"

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
codegen-units = 1
