[package]
name = "bes-installer"
version = "0.1.0"
edition = "2024"
description = "BES Linux Images — TUI Installer"
license = "MIT"

[[bin]]
name = "bes-installer"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
crossterm = "0.29.0"
diceware_wordlists = "1.2.3"
rand = "0.9.1"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha-crypt = { version = "0.5.0", features = ["rand"] }
thiserror = "2.0.18"
toml = "1.0.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
zstd = "0.13.3"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
tempfile = "3.26.0"

[features]
luks-tests = []

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
codegen-units = 1
